[metadata]
name = nova-console-poller
summary = A lightweight utility that polls OpenStack Nova instance console output and streams to stdout
description_file =
    README.md
author = Harald Jensas
author_email = hjensas@redhat.com
home_page = https://github.com/hjensas/nova-console-poller
python_requires = >=3.10
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    nova_console_poller

[entry_points]
console_scripts =
    nova-console-poller = nova_console_poller.main:main

[codespell]
quiet-level = 4
ignore-words-list = assertIn
